# PlayGround

./: .gitignore  .gitmodules  GPU_puzzlers.ipynb  readme.md
20250720_voxtral_testing/: FASTAPI_README.md  QUICK_TEST_README.md  README.md  manual_server_test.py  pyproject.toml  quick_test.py  run_server.py  test_fastapi_server.py  test_voxtral_small.py
20250720_voxtral_testing/app/: __init__.py  main.py
20250720_voxtral_testing/docs/: RFD-000-voxtral-setup.md  RFD-001-voxtral-testing-analysis.md  RFD-003-fastapi-implementation.md
20250720_voxtral_testing/examples/: audio_understanding_example.py  server_manager.py  transcription_example.py
20250720_voxtral_testing/tests/: test_config.py  test_integration.py  test_types.py
20250802_bay_bridge_traffic_cam/: .gitignore  README.md  car_detector.py  config.py  docker-compose.yml  generate-prometheus-config.sh  grafana-dashboard.json  main.py  motion_config.py  motion_detector.py  nginx_main_with_rate_limiting.conf  nginx_with_rate_limiting.conf  object_tracker.py  optical_flow_detector.py  prometheus.yml.template  prometheus_metrics.py  pyproject.toml  setup-cloudflare-tunnel.sh  start-bay-bridge-services.sh  start.sh  start_metrics_server.py  test_tracking.py  test_traffic_counting.py  test_yolo.py  traffic_metrics_state.json.bak
20250802_bay_bridge_traffic_cam/docs/: RFD-000-bay-bridge-traffic-detection-system.md  RFD-001-motion-based-traffic-detection.md  RFD-002-traffic-counting-direction-detection.md  RFD-003-optical-flow-traffic-detection.md  RFD-004-prometheus-grafana-monitoring.md  RFD-005-REVERSE_PROXY_SETUP.md  RFD-006-DATA_PERSISTENCE_INCIDENT.md  RFD-007-DATA_IMPORT_SOLUTION.md  RFD-008-CUSTOM_LANDING_PAGE_SOLUTION.md  RFD-009-PERFORMANCE_OPTIMIZATION_DEBUG.md  RFD-010-PROMETHEUS_RETENTION_DATA_RESTORATION.md
20250802_bay_bridge_traffic_cam/grafana/: grafana.ini
20250802_bay_bridge_traffic_cam/nginx/: bay-bridge-traffic.conf  nginx.conf
20250802_bay_bridge_traffic_cam/prometheus_import/: import_rules.yml  index.html  recording_rules.yml
20250802_bay_bridge_traffic_cam/public/: index.html
20250802_bay_bridge_traffic_cam/scripts/: export_dashboard_metrics.py  export_grafana_data.py  export_prometheus_data.py  import_prometheus_data.py  prometheus_historical_import.py
20250802_bay_bridge_traffic_cam/tests/: test_counter_persistence.py  test_metrics.py
20250819_SUDOKN_graph/sudokn-analysis/: README.md  advanced_analysis.py  enhanced_map_with_stats.py  interactive_explorer.py  interactive_map.py  main.py  pyproject.toml  sudokn_enhanced_map_with_stats.html  visualize_network.py
20250831_one_click_paper_page/backend/: .env.example  main.py  pyproject.toml  shared_services.py  test_sample.tex
20250902_ZeroMQ/: README.md  activate.sh  pyproject.toml  test_setup.py
20250902_ZeroMQ/01-zmq-basics/: pub_sub.py  push_pull.py  req_rep.py  router_dealer.py
20250902_ZeroMQ/02-cluster-patterns/: coordinator.py  heartbeat.py  monitor.py  worker.py
20250902_ZeroMQ/docker/: Dockerfile  docker-compose.yml  simulate-cluster.sh
20250902_ZeroMQ/docs/: DevLog-000-ZeroMQ-Learning-and-Integration-Strategy.md  learning-notes.md
20250908_LLM_learning/: .gitignore  Makefile  README.md  compare_runs.py  gpu_spectrogram.py  monitor_gpu.py  monitor_gpu_v2.c  parse_training_events.py  parse_training_logs.py  pyproject.toml  test_nvml_fields.c  test_nvml_fields.py  visualize_gpu_metrics.py  visualize_gpu_metrics_v2.py  visualize_gpu_metrics_v2_enhanced.py
20250908_LLM_learning/deepspeed_benchmark/: run_benchmark.sh  train_simple.py
20250908_LLM_learning/docs/: DevLog-000-planning.md  DevLog-001-transformer-architecture-deep-dive.md  DevLog-002-2GPU-Training-Setup.md  DevLog-003-GPU-Metrics-NVML-API-Update.md  DevLog-004-Training-Events-Visualization.md  DevLog-005-DeepSpeed-Setup.md
20250908_LLM_learning/trash/: monitor_gpu_v2.py
20250908_LLM_learning/week1-attention/: README.md  annotated_transformer.py  simple_training.py  test_shakespeare_quick.py  train_transformer.py  training_data.py
20251007_GLM_4p5/glm-4.5-air-setup/: .coverage  .gitignore  README.md  eval_models.py  main.py  pyproject.toml  test_endpoints.py
20251009_GLM4p6/glm4-vllm/: .gitignore  README.md  glm4-server.service  main.py  pyproject.toml  start_server.sh
20251023_deepseek_OCR/: pyproject.toml  test_deepseek_ocr.py
20251023_deepseek_OCR/devlog/: DevLog-000-setup-status.md
20251104_qwen_multiple_angle/: README.md  download_model.py  pyproject.toml  server.py  test_model.py  test_optical_table.py  test_optical_table_top.py  test_perspective.py
20251109_EdgeTAM/: README.md  app.py  download_model.py  main.py  pyproject.toml  test_edgetam.py
20251117_qwen3_VL/qwen3-vl-server/: .env.example  .gitignore  README.md  download_model.py  launch_server.sh  main.py  pyproject.toml  server.py  stop_server.sh  test_client.py
20251226_psh/: .gitignore  Cargo.toml  README.md  TEST_OUTPUT.md  rustfmt.toml  snippets.toml
20251226_psh/DevLogs/: DevLog-000-psh_project_scoping_and_design.md  DevLog-001-implementation_plan.md
20251226_psh/psh-cli/: Cargo.toml
20251226_psh/psh-core/: Cargo.toml
20251226_psh/psh-ffi/: Cargo.toml  psh.h
20251226_psh/psh-macos/: Package.swift  README.md  build-rust.sh
20260422_social_network/backend/: .env.example  README.md  alembic.ini  pyproject.toml
20260614_2d_eo_fem_solver/: .gitignore  DevLog-000-2D-EO-FEM-Solver-Planning.md  DevLog-001-Tensor-Assembly-And-Structured-Refinement-Plan.md  DevLog-002-Client-Side-Optical-Mode-Solver.md  DevLog-003-Full-Vector-EM-Mode-Solver-Plan.md  DevLog-004-Gmsh-MFEM-Backend-Plan.md  DevLog-005-System-Level-Rack-Interconnect-Simulation-Research.md  DevLog-006-Advanced-Gmsh-Mesh-Control-Research.md  LICENSE  Makefile  README.md  package.json  pyproject.toml
20260614_2d_eo_fem_solver/eo_fem/: __init__.py  analytic.py  cli.py  config.py  constants.py  dev_server.py  geometry.py  materials.py  solver.py
20260614_2d_eo_fem_solver/examples/: bto_on_sin_plasmonic.yaml  material_stack.yaml  parallel_plate.yaml  si_strip_mode.yaml  tfln_partial_etched_mzm.yaml  (+1 more)
(+1970 files in other folders)
