[project]
name = "20250802-bay-bridge-traffic-cam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "requests>=2.31.0",
    "ultralytics>=8.3.173",
    "scipy>=1.11.0",
    "prometheus_client>=0.22.1",
    "python-dotenv>=1.1.1",
]
