[project]
name = "20250908-llm-learning"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "tensorboard>=2.18.0",
    "wandb>=0.18.0",
    "transformers>=4.47.0",
    "datasets>=3.2.0",
    "tokenizers>=0.21.0",
]
