[project]
name = "deepseek-ocr"
version = "0.1.0"
description = "DeepSeek-OCR model setup and testing"
requires-python = ">=3.12"
dependencies = [
    "torch==2.6.0",
    "transformers==4.46.3",
    "tokenizers==0.20.3",
    "einops",
    "addict",
    "easydict",
    "flash-attn==2.7.3",
    "pillow",
    "matplotlib",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

