[project]
name = "sudokn-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "matplotlib>=3.10.5",
    "networkx>=3.5",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "rdflib>=7.1.4",
    "sparqlwrapper>=2.0.0",
]
