[project]
name = "glm4-vllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.118.2",
    "huggingface-hub>=0.35.3",
    "python-dotenv>=1.1.1",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "uvicorn>=0.37.0",
    "vllm>=0.11.0",
]
