[project]
name = "qwen3-vl-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.2",
    "openai>=2.8.0",
    "python-dotenv>=1.2.1",
    "qwen-vl-utils==0.0.14",
    "uvicorn>=0.38.0",
    "vllm>=0.11.0",
]
