[package]
name = "psh-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
toml.workspace = true
tera.workspace = true
thiserror.workspace = true
notify.workspace = true

[dev-dependencies]
criterion.workspace = true

[lints]
workspace = true
